# WivCPU

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD  run.sh  test.sh  trace.sh
.github/workflows/: tests.yml
rtl/: clk_div.sv  seg7.sv  top.sv
rtl/core/: WIVCpu.sv  defines.sv  hazards.sv  pmp.sv  wb_intercon.sv
rtl/core/cache/: dcache.sv  icache.sv
rtl/core/debug/: dm.sv  dmi.sv  dtmcs.sv  tap_reg.sv  tapctrl.sv
rtl/core/regs/: csrfile.sv  regfile.sv
rtl/core/stages/: core_ex.sv  core_id.sv  core_if.sv  core_mem.sv
rtl/peripherals/: bios.sv  ddr3.sv  spi.sv  test.sv  timer.sv  uart.sv
samples/program/: Makefile  link.ld
samples/program/src/: fat32.c  fat32.h  main.c  sdcard.c  sdcard.h  start.s  utils.c  utils.h
samples/riscv-tests/: Makefile  link.ld
samples/test/: Makefile  link.ld
samples/test/include/: types.h
samples/test/include/kernel/: isr.h  memory.h
samples/test/include/platform/: hardware.h
samples/test/include/proc/: scheduler.h
samples/test/include/utils/: spinlock.h  utils.h
samples/test/src/: main.c  start.s  utils.h
samples/test/src/kernel/: isr.c  isr.s  main.c  memory.c  start.s
samples/test/src/platform/: hardware.c
samples/test/src/utils/: utils.c
src/: sim.cpp  testbench.h
tracefiles/: trace.sav
